Add command for input box funtionality Fixes #1

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:git.viewHistory"
+    "onCommand:git.viewHistory",
+    "onCommand:ag.search"
   ],
   "main": "./out/src/extension",
   "contributes": {
@@ -19,6 +20,10 @@
       {
         "command": "git.viewHistory",
         "title": "Git: View History (git log)"
+      },
+      {
+        "command": "ag.search",
+        "title": "AG: Search something"
       }
     ]
   },
