--- a/package.json
+++ b/package.json
@@ -2,12 +2,27 @@
   "name": "vscode-ag",
   "displayName": "vscode-ag",
   "description": "The Silver Searcher for Visual Studio Code",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "publisher": "zjhmale",
   "engines": {
     "vscode": "^1.8.0"
   },
   "icon": "images/ag.png",
+  "keywords": [
+    "The Silver Searcher",
+    "search tool",
+    "ag"
+  ],
+  "license": "BSD",
+  "homepage": "https://github.com/zjhmale/vscode-ag",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zjhmale/vscode-ag.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zjhmale/vscode-ag/issues",
+    "email": "zjhmale@gmail.com"
+  },
   "categories": [
     "Other"
   ],
